<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#333333"

    tools:context="com.example.roman.final_4.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/cosa_nostra"
            android:scaleType="fitXY"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lacosanostra"
            android:textAlignment="center"
            style="@style/Titlestyle2"
            android:textStyle="italic|bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Razpologeniya"
                style="@style/Titlestyle3" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Pizzahall"
                style="@style/Titlestyle3"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GrillHall"
                style="@style/Titlestyle3"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Bankethall"
                style="@style/Titlestyle3"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kyhnya"
                style="@style/Titlestyle3"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi"
                style="@style/Titlestyle3"
                android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adress"
                android:paddingTop="10dp"
                android:paddingEnd="15dp"
                style="@style/Titlestyle"/>

            <ImageButton
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:scaleType="centerCrop"
                android:src="@drawable/googlemaps2"
                android:id="@+id/img_Btn_maps"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nomer"
                style="@style/Titlestyle"
                android:paddingTop="10dp"
                android:paddingEnd="15dp"/>
            <ImageButton
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:srcCompat="@android:drawable/ic_menu_call"
                android:id="@+id/img_Btn_call"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                style="@style/Titlestyle"
                android:paddingTop="10dp"
                android:paddingEnd="15dp"/>

            <ImageButton
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:srcCompat="@android:drawable/ic_dialog_email"
                android:id="@+id/img_Btn_email"/>



        </LinearLayout>






        <Button
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/www"
          android:id="@+id/Btn_menu"
            android:layout_gravity="center"/>
    </LinearLayout>


</ScrollView>


